--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Ambition et objectifs</h1>
+    <h1>liste</h1>
     <p>
-        -Créer une marque <br>
-        -S'imposer dans la culture otaku au Bénin <br>
-        -Organiser des evenements pour otaku <br>
-        -Créer du contenue <br>
+        -malik <br>
+        -w4ro <br>
+        -loic <br>
+        -kevin <br>
+        
     </p>
 </body>
 </html>
