ambition et obj

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>liste menbre</h1>
+    <h1>ambition et obj </h1>
     <p>
-        -w4ro <br>
-        -malik <br>
-        -loic <br>
+        -creer une marque<br>
+        -organiser des evenement otaku <br>
+        -s'imposer dans la culture otaku <br>
     </p>
 </body>
 </html>
